--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,12 @@
 
 </head>
 <body>
+	<br><br><br><br><br>
 	<center>
 		
 	<table> 
 		<tr> <td> </td> <td > </td> <td> </td> </tr>
-		<tr> <td > </td>  <td class="viewable"> <a href="Page1.html"> <img src="Images/gift.jpg" id="gift">  </a> </td>  <td> </td> </tr>
+		<tr> <td > </td>  <td class="viewable" style="border: none; border-radius: 300px; background-color: purple;"> <center>  <a href="Page1.html"> <img src="Images/gift.png" id="gift"> </center> </a> </td>  <td> </td> </tr>
 		<tr> <td> </td> <td > </td> <td> </td> </tr>
 
 	</table>
