--- a/Page1.html
+++ b/Page1.html
@@ -7,8 +7,19 @@
 	<link href="index.css" rel="Stylesheet" type="text/css"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+
+<script>
+function myFunction() {
+  window.alert("Hello Babee! :> \ i just wanna greet you a Happy Happy Birthday <3");
+}
+</script>
+
+
 </head>
 <body>
+
+
 
 	<center>
 	
@@ -19,12 +30,33 @@
 
 
 <br> <br>
-	<table> 
-		<tr> <td> </td> <td class="viewable"> </td> <td> </td> </tr>
-		<tr> <td class="viewable"> </td> <td> </td> <td class="viewable"> </td> </tr>
-		<tr> <td> </td> <td class="viewable"> </td> <td> </td> </tr>
+<div>
+	<table > 
+
+		<tr> <td> <img src="Images/heart.png" class="card"> </td> <td class="viewable"> <center> <img src="Images/card1.jpg" class="card"> </center> </td> <td>  <img src="Images/heartright.png" class="card"></td> </tr>
+		<tr> <td class="viewable"> <center> <img src="Images/card4.jpg" class="card"> </center> </td> <td style="background-color: pink;"> <Center> <img src="Images/cake.png"> </Center> </td> <td class="viewable">  <center> <img src="Images/card3.jpg" class="card"> </center> </td> </tr>
+		<tr> <td> <img src="Images/heartdownleft.png" class="card"> </td> <td class="viewable"> <center>
+			<button id="myBtn" onclick="myFunction()">
+<img src="Images/card2.jpg" class="card"> </button>
+
+
+
+</div>
+</img> </center> </td> <td>  <img src="Images/heartdownright.png" class="card"></td> </tr>
 
 	</table>
+</div>
+
+
+<br> <br>
+
+<div id="Talumpati"> 
+<H1>Happy Birthday! </H1>
+
+</div>
+<br>
+<!-- Trigger/Open The Modal -->
+
 
 	</center>
 
